--- a/css/style.styl
+++ b/css/style.styl
@@ -24,13 +24,37 @@ header
     margin-top: 10px;
 
 nav
-    width: 400px;
+    width: 450px;
     height: $header-height;
     margin: 0 auto;
+
+    section
+        width: 60px;
+        height: 105px;
+        float: left;
+        overflow: visible;
 
     input
         position: absolute;
         top: -100px;
+
+        &:checked + label
+            width: $pin-size;
+            height: $pin-size;
+            margin: 10px 10px 0 10px;
+            background-color: #B20000;
+
+                span
+                    height: 30px;
+                    background-color: #000;
+                    
+                p
+                    color: #FFF;
+
+nav input:checked + label:hover p 
+    margin: 10px 0 0 0;
+
+            
 
 border-radius()
     -webkit-border-radius: arguments;
@@ -49,7 +73,7 @@ label
     height: $pin-size;
     float:left;
     margin: 10px 10px 0 10px;
-    transition: all 1s ease;
+    transition: all 0.5s ease;
 
     &:hover
         width: 40px;
@@ -57,7 +81,8 @@ label
         background-color: $pin-color;
         color: white;
         text-align: center;
-        margin-right: 0px;
+        margin-top: 5px;
+        margin-left: 5px;
         border: 1px solid $pin-color;
 
     &:hover
@@ -66,7 +91,14 @@ label
 
     p
         margin: 10px 0 0 0;
-        transition: all 1s ease;
+        transition: all 0.5s ease;
+
+    span 
+        width: 2px;
+        height: 0px;
+        background-color: 2px solid black;
+        margin: 8px 0 0 14px;
+        transition: all 0.5s ease;
 
 
 span
@@ -95,7 +127,9 @@ span
     background-color: $base-color;
 
 .dateText
+    clear: both;
     float: left;
+    margin-top: -25px;
     margin-left: $left-margin-for-date;
     width: 150px;
     height: 150px;
