media query added

--- a/css/style.styl
+++ b/css/style.styl
@@ -24,7 +24,7 @@ header
     margin-top: 10px;
 
 nav
-    width: 450px;
+    width: 420px;
     height: $header-height;
     margin: 0 auto;
 
@@ -161,3 +161,13 @@ span
             font-size: 8em;
             color: $date-number-color;
             margin: 0 auto;
+
+/* ****************** media queries **************************** */
+@media all and (max-width: 800px)
+
+    header
+        width: 800px;
+
+
+    .container
+        width: 800px;
