--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@ header {
   margin-top: 10px;
 }
 nav {
-  width: 450px;
+  width: 420px;
   height: 70px;
   margin: 0 auto;
 }
@@ -144,4 +144,13 @@ span {
   font-size: 8em;
   color: #444;
   margin: 0 auto;
+}
+/* ****************** media queries **************************** */
+@media all and (max-width: 800px) {
+  header {
+    width: 800px;
+  }
+  .container {
+    width: 800px;
+  }
 }
