new project structure

--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -8,12 +8,28 @@ $pin-size = 30px
 $pin-size2 = 35px
 $pin-color = #B20000
 
+/* ****************** reset **************************** */
+
+html, body, div, span, h1, h2, h3, h4, h5, h6, p, a, img, dd, ol, ul, li, label, footer, header, menu, nav,  section 
+    margin: 0;
+    padding: 0;
+    border: 0;
+    font-size: 100%;
+    font: inherit;
+    vertical-align: baseline;
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section 
+    display: block;
+
 
 body
     font-family:  Mypiad Pro, Arial, Helvetica, sans-serif;
     font-size: $base-font-size;
     background-color: $header-color;
     font-weight: 200;
+    line-height: 1;
 
 /* ****************** header **************************** */
 
