--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -176,6 +176,10 @@ span
     height: 1000px;
     background-color: $base-color;
 
+#canvas
+    width 100%;
+    height: 1000px;
+
 .dateText
     clear: both;
     float: left;
@@ -198,3 +202,4 @@ span
 
     .container
         width: 900px;
+
