--- a/src/css/noteStyle.styl
+++ b/src/css/noteStyle.styl
@@ -7,7 +7,7 @@ $color2 = #1E62D0;
 	height: 120px;
 	background:  #FFFFFF;
 	border: 1px solid #F6F6F6;
-	border-radius: 5px;
+	border-radius: 3px;
 	position: absolute; 
 	left: 300px; 
 	top: 150px;
@@ -65,6 +65,7 @@ textarea{
   width: 15px;
   height: 15px;
   margin: 3px;
+  line-height:100%;
   padding: 0;
   border-radius: 100px;
   background: rgba(0,0,0,0.1);
@@ -73,12 +74,14 @@ textarea{
 .btn:hover{
   background: #B20000;
   cursor: pointer;
+  color:white;
 }
 
 .btn:active{
   background: #444;
-  width: 14.5px;
-  height: 14.5px;
+  width: 15px;
+  line-height:100%;
+  height: 15px;
   cursor: pointer;
 }
 
