drag-n-drop new redaction

--- a/src/css/noteStyle.styl
+++ b/src/css/noteStyle.styl
@@ -62,6 +62,9 @@ textarea{
 	resize: none;
 	display: block;
  	width: 246px;
+ 	font-size:14px;
+ 	padding:5px;
+ 	box-sizing:border-box;
   	height: 80px;
 }
 	
